Expose item type attributes